--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Where Runner</string>
-    <string name="intro_text">Long click to exit the map.</string>
+
+    <string name="recording">Recording</string>
+    <string name="settings">Settings</string>
 </resources>
