More action drawer support

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="recording">Recording</string>
     <string name="settings">Settings</string>
+
+    <string name="record">Record</string>
+    <string name="activity_type">Activity Type</string>
 </resources>
