--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="settings">Settings</string>
 
     <string name="record">Record</string>
+    <string name="stop_recording">Stop</string>
+
     <string name="activity_type">Activity Type</string>
 
     <string name="notification_content_text">Where Runner?!</string>
