--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="recording">Record</string>
     <string name="settings">Settings</string>
+    <string name="history">History</string>
 
     <string name="record">Record</string>
     <string name="stop_recording">Stop</string>
@@ -14,4 +15,7 @@
     <string name="notification_content_text">Where Runner?!</string>
 
     <string name="hrm_no_data">- -</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="nr_workouts">Nr. of Workouts:</string>
 </resources>
