--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -21,8 +21,8 @@
     <string name="nr_workouts">Nr. of Workouts:</string>
 
     <string name="distance_total">TOTAL DISTANCE</string>
-    <string name="speed_current_average">SPEED (CURR/AVG)</string>
-    <string name="speed_average_max">SPEED (AVG/MAX)</string>
+    <string name="speed_current_average">SPEED (CURR/AVG KPH)</string>
+    <string name="speed_average_max">SPEED (AVG/MAX KPH)</string>
     <string name="time_elapsed">ELAPSED TIME</string>
 
     <string name="heart_rate">HEART RATE</string>
