--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,24 +1,20 @@
 <resources>
     <string name="app_name">Where Runner</string>
 
-    <string name="recording">Record</string>
-    <string name="settings">Settings</string>
-    <string name="history">History</string>
+    <string name="recording">Record a Workout</string>
+    <string name="history">Workout History</string>
 
-    <string name="record">Record</string>
+    <string name="record_workout">Record</string>
     <string name="stop_recording">Stop</string>
 
     <string name="activity_type">Activity Type</string>
     <string name="activity_running">Running</string>
     <string name="activity_cycling">Cycling</string>
 
-    <string name="hrm_turn_on">Turn HRM ON</string>
-    <string name="hrm_turn_off">Turn HRM OFF</string>
+    <string name="hrm_turn_on">Heart Rate Sensor: OFF</string>
+    <string name="hrm_turn_off">Heart Rate Sensor: ON</string>
 
     <string name="hrm_no_data">- -</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="nr_workouts">Nr. of Workouts:</string>
 
     <string name="distance_total">TOTAL DISTANCE</string>
     <string name="speed_current_average">SPEED (CURR/AVG KPH)</string>
